# Adjusted-EPS-Analyzer

./: .gitignore  README.md  app.js  filelist.txt  index.html  list_models.py  pyproject.toml  requirements.txt  style.css
.github/workflows/: 05_update.yml  Adjusted_Eps_Analyzer_update.yml  MACRO_PULSE_Update  MACRO_PULSE_Update.yml  Market_Pulse_Update.yml  TANUKI_VALUATION_Update.yml  adjusted_eps_analyzer_update.yml  collect_and_send.yml  market_data.yml  tanuki_valuation_update.yml  update.yml
common/sec_data/: parser.py  reader.py  update.py
config/: adjustment_items.json  cik_lookup.csv  monitor_tickers.yaml  prompts.yaml  sectors.yaml
data/: 05_events.csv  05_fed_context.csv  05_indicator_schedule.csv  stocks.db
data/PLTR/: annual.json  quarterly.json  ttm.json
data/extracted_filings/AMD/: AMD_10-K_2026-02-04.txt  AMD_10-Q_2025-11-05.txt
data/extracted_filings/AMZN/: AMZN_10-K_2026-02-06.txt
data/extracted_filings/APP/: APP_10-K_2026-02-26.txt  APP_10-Q_2025-11-06.txt
data/extracted_filings/CELH/: CELH_10-K_2026-03-02.txt  (+1 more)
docs/: admin.html  index.html  stock.html  tickers.html
docs/data/: summary.json
docs/js/: app.js
docs/market-monitor/: index.html
docs/value-monitor/: admin.html  index.html  stock.html  tickers.html
src/: __init__.py  adjustment_detector.py  ai_analyzer.py  api_clients.py  edgar_fetcher.py  eps_calculator.py  external_data.py  extract_key_facts.py  maturity_monitor.py  pipeline.py  tax_adjuster.py  xbrl_parser.py
src/market-monitor/: collect_and_send.py
src/stock_event_timeline/: app.py  news_fetcher.py
(+801 files in other folders)
