[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "on-a-journey"
version = "0.1.0"
description = "Investment analysis tools"
requires-python = ">=3.10"
dependencies = [
    # 共通／value
    "pandas>=1.5.0",
    "pyyaml>=6.0",
    "yfinance>=0.2.0",
    "requests>=2.31.0",
    "openai>=1.0.0",          # XAI API 用（OpenAI 互換）
    # market/market_pulse
    "feedparser>=6.0",
    # market/macro_pulse
    "fredapi>=0.5.0",
    "fmp-python>=0.5.0",      # Financial Modeling Prep API
    "google-generativeai>=0.3.0",
    "discord-webhook>=1.0.0",
    "python-dotenv>=1.0.0",
    # value/stock_event_timeline
    "streamlit>=1.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]